# DCATUS-Validator

./: .gitignore  README.md  dcat-validator.js  deno.json  main.ts  package-lock.json  package.json  pyproject.toml  schema-validator.ts  validate.py
schemas/: dcat-us-1.json  gsa-dcat-v7.json  gsa-dcat.json
test-json/: dcat1-sample.json
tests/: data.test.ts  data.ts  validator.test.ts  validator_test.ts
