[project]
name = "dcatus-validator"
version = "0.1.0"
description = "Validator for DCAT-US json files."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "jsonschema>=4.22.0",
    "rfc3987>=1.3.8",
]

[dependency-groups]
dev = [
    "ruff>=0.11.9",
]

[tool.ruff.lint]
select = ["I"]
